[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Defesa1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Defesa2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/defesa.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=2]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("defesa_sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 2 ) ]
}

[node name="defesa" type="Area2D"]
position = Vector2( 80, 275 )
script = ExtResource( 3 )

[node name="defesa_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="defesa_colliision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="defesa_animation" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_defesa_area_entered"]
[connection signal="animation_finished" from="defesa_animation" to="." method="_on_defesa_animation_animation_finished"]
